# libsql-client-rs

./: Cargo.toml  README.md
.github/workflows/: smoke_test.yml
examples/: connect_from_config.rs  connect_from_env.rs  select.rs
src/: client.rs  connection.rs  de.rs  hrana.rs  http.rs  hyper.rs  lib.rs  local.rs  proto.rs  reqwest.rs  spin.rs  statement.rs  transaction.rs  utils.rs  value.rs  workers.rs
