[package]
name = "libsql-client"
version = "0.31.8"
edition = "2021"
license = "Apache-2.0"
description = "HTTP-based client for libSQL and sqld"
keywords = ["libsql", "sqld", "database", "driver", "http"]
repository = "https://github.com/libsql/libsql-client-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.0"
base64 = "0.21.2"
num-traits = "0.2.16"
serde_json = "1.0.103"
worker = { version = "0.0.17", optional = true }
spin-sdk = { version = "1.4.1", git = "https://github.com/fermyon/spin", tag = "v1.4.1", default-features = false, optional = true }
sqlite3-parser = { version = "0.9.0", default-features = false, features = [ "YYNOERRORRECOVERY" ] }
http = { version = "0.2.9", optional = true }
bytes = { version = "1.4.0", optional = true }
anyhow = "1.0.72"
reqwest = { version = "0.11.18", optional = true, default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.29.0", optional = true, default-features = false, features = [
    "column_decltype"
] }
hrana-client = { version = "0.3.2", optional = true }
hrana-client-proto = { version = "0.2.1" }
futures-util = { version = "0.3.28", optional = true }
serde = "1.0.174"
tracing = "0.1.37"
futures = "0.3.28"
fallible-iterator = "0.3.0"

[features]
default = ["local_backend", "hrana_backend", "reqwest_backend", "mapping_names_to_values_in_rows"]
workers_backend = ["worker", "futures-util"]
reqwest_backend = ["reqwest"]
local_backend = ["rusqlite"]
spin_backend = ["spin-sdk", "http", "bytes"]
hrana_backend = ["hrana-client"]
separate_url_for_queries = []
mapping_names_to_values_in_rows = []

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
libsql-client = { path = "." }
rand = "0.8.5"
tracing-subscriber = "0.3.17"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "select"
path = "examples/select.rs"

[[example]]
name = "connect_from_env"
path = "examples/connect_from_env.rs"

[[example]]
name = "connect_from_config"
path = "examples/connect_from_config.rs"

[workspace]
