[package]
name = "libsql-client"
version = "0.34.0"
edition = "2021"
license = "Apache-2.0"
description = "HTTP-based client for libSQL and sqld"
keywords = ["libsql", "sqld", "database", "driver", "http"]
repository = "https://github.com/libsql/libsql-client-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
base64 = "0.21.0"
num-traits = "0.2.15"
serde_json = "1.0.91"
worker = { version = "0.2.0", optional = true }
spin-sdk = { version = "2.1", default-features = false, features = [
    "http",
    "json",
], optional = true }
sqlite3-parser = { version = "0.12.0", default-features = false, features = [
    "YYNOERRORRECOVERY",
] }
http = { version = "0.2", optional = true }
bytes = { version = "1.4.0", optional = true }
anyhow = "1.0.69"
reqwest = { version = "0.11.14", optional = true, default-features = false, features = [
    "rustls-tls",
] }
hrana-client = { version = "0.3", optional = true }
hrana-client-proto = { version = "0.2" }
futures-util = { version = "0.3.21", optional = true }
serde = "1.0.159"
tracing = "0.1.37"
futures = "0.3.28"
fallible-iterator = "0.3.0"
libsql = { version = "=0.1.8", optional = true }

[features]
default = [
    "local_backend",
    "hrana_backend",
    "reqwest_backend",
    "mapping_names_to_values_in_rows",
]
workers_backend = ["worker", "futures-util"]
reqwest_backend = ["reqwest"]
local_backend = ["libsql"]
spin_backend = ["spin-sdk", "http", "bytes"]
hrana_backend = ["hrana-client"]
separate_url_for_queries = []
mapping_names_to_values_in_rows = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
libsql-client = { path = "." }
rand = "0.8.5"
tracing-subscriber = "0.3.17"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "select"
path = "examples/select.rs"

[[example]]
name = "connect_from_env"
path = "examples/connect_from_env.rs"

[[example]]
name = "connect_from_config"
path = "examples/connect_from_config.rs"

[workspace]
